# auto_aim_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  change_log.md  pyproject.toml
app/: auto_aim.rs  test_coord.rs  test_hot_reload_cfg.rs  test_serial.rs
app/auto_aim/: Cargo.toml
app/auto_aim_async/: Cargo.toml
app/auto_aim_async/src/: main.rs  rbt_threads.rs  threads.rs
app/auto_aim_async/src/rbt_threads/: rbt_cfg_thread.rs
app/comm_test/: Cargo.toml
app/comm_test/src/: main.rs
app/ippe_benchmark/: Cargo.toml
app/ippe_benchmark/src/: main.rs
app/single_frame/: Cargo.toml
app/single_frame/src/: main.rs
app/single_frame_dev/: Cargo.toml
app/single_frame_dev/src/: main.rs
app/sqpnp_benchmark/: Cargo.toml
app/sqpnp_benchmark/src/: main.rs
app/test_coord/: Cargo.toml
app/test_coord/src/: main.rs
app/test_serial/src/: main.rs
cfg/: rbt_cfg.toml
config/: robot_config.toml
docs/: model.md  估计器.md  自瞄与通讯.md  自瞄完整流程.md
lib/: Cargo.toml
lib/src/: lib.rs  rbt_base.rs  rbt_err.rs  rbt_global.rs  rbt_infra.rs  rbt_mod.rs
lib/src/rbt_app/: multi_threads.rs  single_thread.rs
lib/src/rbt_base/: rbt_algorithm.rs  rbt_cam_model.rs  rbt_frame.rs  rbt_game.rs  rbt_geometry.rs  rbt_ippe.rs  rbt_math.rs
lib/src/rbt_base/rbt_algorithm/: rbt_antigravity.rs  rbt_eskf.rs  rbt_sort.rs
lib/src/rbt_base/rbt_geometry/: rbt_angle.rs  rbt_coord.rs  rbt_coord_2d.rs  rbt_coord_dev.rs  rbt_cylindrical2.rs  rbt_cylindrical3.rs  rbt_line_2d.rs  rbt_point2.rs  rbt_point3.rs  rbt_point_dev.rs  rbt_pose3.rs  rbt_rigid.rs
lib/src/rbt_base/rbt_math/: eskf.rs  sqpnp.rs
lib/src/rbt_base/rbt_math/sqpnp/: sqpnp_def.rs  sqpnp_impl.rs
lib/src/rbt_infra/: rbt_cfg.rs  rbt_comm.rs  rbt_comm_device.rs  rbt_err.rs  rbt_global.rs  rbt_log.rs  rbt_macro.rs  rbt_queue_async.rs  rbt_rerun.rs  rbt_serial.rs  rbt_utils.rs
lib/src/rbt_mod/: rbt_armor.rs  rbt_comm.rs  rbt_ctrl.rs  rbt_detector.rs  rbt_enemy.rs  rbt_enemy_dev.rs  rbt_estimator.rs  rbt_frame.rs  rbt_generic.rs  rbt_solver.rs  rbt_threads.rs
lib/src/rbt_mod/rbt_armor/: detected_armor.rs  rbt_armor.md  solved_armor.rs  tracked_armor.rs
lib/src/rbt_mod/rbt_comm/: rbt_comm_device.rs  rbt_comm_frame.rs
lib/src/rbt_mod/rbt_ctrl/: armor_select.rs
lib/src/rbt_mod/rbt_detector/: rbt_detect_proc.rs  rbt_yolo.rs
lib/src/rbt_mod/rbt_estimator/: enemy_model.rs  jun_robot_estimator.rs  outpost_model.rs  rbt_enemy_dynamic_model.rs  rbt_enemy_model.rs  rbt_estimator.md  rbt_estimator_def.rs  rbt_estimator_impl.rs
lib/src/rbt_mod/rbt_estimator/enemy_model/: outpost_model.rs
lib/src/rbt_mod/rbt_solver/: rbt_orientation_solver.rs
lib/src/rbt_mod/rbt_threads/: rbt_cfg_thread.rs
rerun-log/: test.rrd
src/: config.rs  lib.rs  module.rs  rbt_app.rs  rbt_base.rs  rbt_err.rs  rbt_global.rs  rbt_mod.rs  util.rs
src/module/: armor.rs  armor_detector.rs  rbt_estimator.rs  rbt_serial_async.rs  rbt_solver.rs
src/module/rbt_solver/: pnp.rs
src/rbt_app/: single_thread.rs
src/rbt_base/: rbt_cam.rs  rbt_frame.rs  rbt_geometry.rs
src/rbt_base/rbt_geometry/: rbt_coord.rs  rbt_rigid.rs
src/rbt_base/rbt_math/: eskf.rs  sqpnp.rs
src/rbt_base/rbt_math/sqpnp/: sqpnp_def.rs  sqpnp_impl.rs
src/rbt_infra/: rbt_cfg.rs  rbt_queue_async.rs
src/rbt_mod/: rbt_armor.rs  rbt_detector.rs  rbt_estimator.rs  rbt_solver.rs  rbt_threads.rs
src/rbt_mod/rbt_threads/: rbt_cfg_thread.rs
tools/: add_norm.py  catch_tensorrt.py  converet_to_fp16.py  convert_to_yuv.py  dynamic_quantization_u8.py  onnxruntime_infer.py  opencv_solvepnp.py  openvino_infer.py  pipeline.py
