[workspace]
members = ["lib", "app/auto_aim_async", "app/ippe_benchmark", "app/single_frame_dev", "app/test_coord"]
default-members = ["lib"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lu Zhongjin <luzhongjin365@gmail.com>"]
license = "MIT"

[profile.release]
opt-level = 3

[workspace.dependencies]
# base
nalgebra = "0.33.2"
imageproc = "0.25.0"
image = "0.25.6"

# for infer
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", features = ["tensorrt", "openvino"] }

# error handle
thiserror = "2.0.12"

# logger
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
rerun = "0.23.4"

# cfg
toml = "0.8.22"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }

# framework
tokio = { version = "1.45.1", features = ["full"] }
tokio-serial = "5.4.5"
chrono = "0.4.41"
notify = "8.0.0"
crossbeam-queue = "0.3.12"
