[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# base
nalgebra = { workspace = true }
imageproc = { workspace = true }
image = { workspace = true }

ndarray = { workspace = true }
ort = { workspace = true }

thiserror = { workspace = true }

# logger
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
rerun = { workspace = true }

# cfg
toml = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }

# framework
tokio = { workspace = true }
tokio-serial = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
crossbeam-queue = { workspace = true }
strum = { workspace = true}