[package]
name = "single_frame_dev"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lib = { path = "../../lib" }
tokio = { workspace = true }
tracing = { workspace = true }
nalgebra = { workspace = true }
rerun = { workspace = true }
image = { workspace = true }
tracing-appender = {workspace = true}